# consensus_visualizer

./: .gitignore  main.py  pyproject.toml
src/: models.py
src/parser/: __init__.py  parser_base.py  parser_logs.py  parser_mock.py
src/visualizer/: __init__.py  dash_app.py  figure_builder.py
