[project]
name = "consensus-visualizer"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "basedpyright>=1.36.2",
    "bokeh>=3.8.1",
    "dash>=3.3.0",
    "dash-bootstrap-components>=2.0.4",
    "kaleido>=1.2.0",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
    "ruff>=0.14.10",
]
